; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_main.c_httpd_close_all_sessions.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_main.c_httpd_close_all_sessions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.httpd_data = type { i32 }

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"cleaning up socket %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.httpd_data*)* @httpd_close_all_sessions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @httpd_close_all_sessions(%struct.httpd_data* %0) #0 {
  %2 = alloca %struct.httpd_data*, align 8
  %3 = alloca i32, align 4
  store %struct.httpd_data* %0, %struct.httpd_data** %2, align 8
  store i32 -1, i32* %3, align 4
  br label %4

4:                                                ; preds = %9, %1
  %5 = load %struct.httpd_data*, %struct.httpd_data** %2, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @httpd_sess_iterate(%struct.httpd_data* %5, i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = icmp ne i32 %7, -1
  br i1 %8, label %9, label %19

9:                                                ; preds = %4
  %10 = load i32, i32* @TAG, align 4
  %11 = call i32 @LOG_FMT(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @ESP_LOGD(i32 %10, i32 %11, i32 %12)
  %14 = load %struct.httpd_data*, %struct.httpd_data** %2, align 8
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @httpd_sess_delete(%struct.httpd_data* %14, i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @close(i32 %17)
  br label %4

19:                                               ; preds = %4
  ret void
}

declare dso_local i32 @httpd_sess_iterate(%struct.httpd_data*, i32) #1

declare dso_local i32 @ESP_LOGD(i32, i32, i32) #1

declare dso_local i32 @LOG_FMT(i8*) #1

declare dso_local i32 @httpd_sess_delete(%struct.httpd_data*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
